--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -209,3 +209,25 @@ h3, .font-level-3 { font-family: var(--font-heading); font-size: 1.4375rem; font
   flex-direction: column;
   gap: 4px;
 }
+
+
+.btn-editar.btn-disabled {
+  background-color: #ccc !important;
+  color: #555 !important;
+  cursor: not-allowed !important;
+  border: 1px solid #aaa !important;
+}
+
+.btn-disabled {
+  background-color: var(--gray-b);
+  color: var(--white);
+  cursor: not-allowed;
+}
+
+.btn-icono.btn-disabled {
+  background-color: #ddd !important;
+  color: #999 !important;
+  cursor: not-allowed !important;
+  pointer-events: none;
+  border: 1px solid #aaa !important;
+}
